Add README.md and correct spelling errors (#179)